# FlaskCompanion

./: .gitignore  .pre-commit-config.yaml  README.MD  app.py  bandit_report.txt  cli.py  conftest.py  forms.py  models.py  pyproject.toml  requirements.txt  test_app.py  test_mirrors.py
.github/workflows/: ci.yml
attached_assets/: Pasted--Python-Flask--1747621705820.txt
instance/: inventory.db
routes/: api.py  auth.py  category.py  customer.py  dashboard.py  order.py  product.py  purchase.py  raw_material.py  report.py  supplier.py
static/css/: style.css
static/js/: order.js
templates/: base.html  dashboard.html  login.html
templates/category/: detail.html  form.html  list.html
templates/customer/: detail.html  form.html  list.html
templates/order/: # Code Citations.md  detail.html  form.html  list.html  outbound_slip.html
templates/product/: adjust.html  detail.html  form.html  list.html
templates/purchase/: form.html  list.html
templates/raw_material/: adjust.html  detail.html  form.html  list.html
templates/report/: material_cost.html  sales.html
templates/supplier/: detail.html  form.html  list.html
templates/user/: form.html  list.html
