[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "A simple inventory management system."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = ">=3.11" # Python 版本要求

# 项目运行时需要的依赖列表
email-validator = ">=2.2.0"
flask-login = ">=0.6.3"
flask = ">=3.1.1"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
flask-wtf = ">=1.2.2"
sqlalchemy = ">=2.0.41"
werkzeug = ">=3.1.3"
wtforms = ">=3.2.1"
pypinyin = {version = "^0.54.0", python = ">=3.11,<4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-flask = "^1.3.0"
black = "^24.0.0"
python-dotenv = "^1.1.0"
click = "^8.2.1"
bandit = "^1.8.3"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


