[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "A simple inventory management system."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = ">=3.11" # Python 版本要求

# 项目运行时需要的依赖列表
email-validator = ">=2.2.0"
flask-login = ">=0.6.3"
flask = ">=3.1.1"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
flask-wtf = ">=1.2.2"
sqlalchemy = ">=2.0.41"
werkzeug = ">=3.1.3"
wtforms = ">=3.2.1"
pypinyin = {version = "^0.54.0", python = ">=3.11,<4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-flask = "^1.3.0"
black = "^24.0.0"
python-dotenv = "^1.1.0"
click = "^8.2.1"
bandit = "^1.8.3"
pre-commit = "^4.2.0"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["flask_login.*", "flask_sqlalchemy.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


